--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.3.0
 grailsVersion=3.3.8
 groovyVersion=4.0.15
-micronautVersion=4.1.6-SNAPSHOT
+micronautVersion=4.1.6
 kafkaVersion=NA
-micronautCoreVersion=4.1.11-SNAPSHOT
+micronautCoreVersion=4.1.11
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.1.6-SNAPSHOT
