--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -58,6 +58,7 @@ rocker-gradle-plugin = "3.0.4"
 rocker-maven-plugin = "1.3.0"
 scram-client = "2.1"
 slf4j = "1.7.36"
+jul-to-slf4j="2.0.9"
 slf4j-simple-logger = "2.0.0"
 zeebe-micronaut-client = "1.14.0"
 ktor = "2.2.4"
@@ -114,6 +115,7 @@ ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.
 kotlin-noarg = { module = "org.jetbrains.kotlin:kotlin-noarg", version.ref = "kotlin" }
 log4j-api = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j" }
 log4j-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j" }
+jul-to-slf4j = { module = "org.slf4j:jul-to-slf4j", version.ref = "jul-to-slf4j" }
 log4j-over-slf4j = { module = "org.slf4j:log4j-over-slf4j", version.ref = "slf4j" }
 log4j-slf4j = { module = "org.apache.logging.log4j:log4j-slf4j-impl", version.ref = "log4j" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty-jvm", version.ref = "ktor" }
