--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.3.0
 grailsVersion=3.3.8
 groovyVersion=4.0.15
-micronautVersion=4.2.0-SNAPSHOT
+micronautVersion=4.2.0
 kafkaVersion=NA
 micronautCoreVersion=4.2.0
 projectDesc=Generates Micronaut applications
