--- a/starter-core/build.gradle
+++ b/starter-core/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     api "io.github.java-diff-utils:java-diff-utils:4.10"
     api "org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r"
     api("org.yaml:snakeyaml")
+    api 'io.micronaut.serde:micronaut-serde-api'
     implementation("com.typesafe:config:1.4.2")
     implementation("io.micronaut.testresources:micronaut-test-resources-build-tools")
     implementation 'org.apache.commons:commons-compress:1.24.0'
@@ -47,4 +48,3 @@ rocker {
     javaVersion = '17'
     postProcessing = ['io.micronaut.starter.rocker.WhitespaceProcessor']
 }
-
