--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,10 @@ title=Micronaut Launch
 githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.3.0
 grailsVersion=3.3.8
-groovyVersion=4.0.15
+groovyVersion=4.0.16
 micronautVersion=4.2.1-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.2.1-SNAPSHOT
+micronautCoreVersion=4.2.1
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.2.1-SNAPSHOT
