--- a/test-features/build.gradle
+++ b/test-features/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation "com.oracle.oci.sdk:oci-java-sdk-full:1.34.0"
     testImplementation("ch.qos.logback:logback-classic")
     testImplementation("org.yaml:snakeyaml")
+    testImplementation("org.apache.groovy:groovy-yaml")
 }
 
 sourceSets {
