--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.16
 micronautVersion=4.2.3-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.2.3-SNAPSHOT
+micronautCoreVersion=4.2.3
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.2.3-SNAPSHOT
