--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.16
 micronautVersion=4.3.0-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.3.0-SNAPSHOT
+micronautCoreVersion=4.3.0
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.3.0-SNAPSHOT
