--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.3.0
 grailsVersion=3.3.8
 groovyVersion=4.0.16
-micronautVersion=4.2.4-SNAPSHOT
+micronautVersion=4.2.4
 kafkaVersion=NA
 micronautCoreVersion=4.2.4
 projectDesc=Generates Micronaut applications
