--- a/test-suite-graal/build.gradle
+++ b/test-suite-graal/build.gradle
@@ -10,16 +10,11 @@ repositories {
 
 dependencies {
     implementation(project(":starter-api"))
+    implementation(project(":micronaut-cli"))
     implementation(project(":starter-web-netty"))
     testImplementation("io.micronaut.test:micronaut-test-junit5")
+    testImplementation("org.junit.jupiter:junit-jupiter-params")
     testImplementation("ch.qos.logback:logback-classic")
-}
-
-configurations.all {
-    resolutionStrategy {
-        force "io.micronaut:micronaut-core-bom:$micronautCoreVersion"
-        force "io.micronaut:micronaut-inject-groovy:$micronautCoreVersion"
-    }
 }
 
 configurations.all {
