Add line ending as an input to the starter cooords task
We ended up with the file created by the Windows CLI build as the cached version.

This triggers a checkstyle error when it's built on a non-windows machine.

This PR adds the line-ending as an input to the task, so the cache-key is dependent on it.

--- a/buildSrc/src/main/groovy/io.micronaut.internal.starter.coordinates.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.starter.coordinates.gradle
@@ -6,6 +6,7 @@ def generateCoordinateUtils = tasks.register("generateCoordinateUtils", io.micro
     packageName = "io.micronaut.starter.build.dependencies"
     outputDirectory = layout.buildDirectory.dir("generated-sources/coordinates")
     versionCatalog = project.extensions.getByType(VersionCatalogsExtension).named("templateLibs")
+    lineSeparator = System.lineSeparator()
 }
 
 sourceSets.main.java.srcDir(generateCoordinateUtils)
