--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.18
-micronautVersion=4.3.4-SNAPSHOT
+micronautVersion=4.3.4
 kafkaVersion=NA
 micronautCoreVersion=4.3.9
 projectDesc=Generates Micronaut applications
