--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.19
 micronautVersion=4.3.6-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.3.11-SNAPSHOT
+micronautCoreVersion=4.3.11
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.3.6-SNAPSHOT
