--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.19
-micronautVersion=4.3.6-SNAPSHOT
+micronautVersion=4.3.6
 kafkaVersion=NA
 micronautCoreVersion=4.3.11
 projectDesc=Generates Micronaut applications
