--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ micronautDocsVersion=2.0.0
 org.gradle.parallel=true
 spockVersion=2.3-groovy-4.0
 projectGroup=io.micronaut.starter
-title=Micronaut Launch
+title=Micronaut Starter
 githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
