--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.20
 micronautVersion=4.4.1-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.4.4-SNAPSHOT
+micronautCoreVersion=4.4.4
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.4.1-SNAPSHOT
