--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.20
-micronautVersion=4.4.1-SNAPSHOT
+micronautVersion=4.4.1
 kafkaVersion=NA
-micronautCoreVersion=4.4.4
+micronautCoreVersion=4.4.6
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.4.1-SNAPSHOT
